  * Setting "SPICE_KERNELS", "CAL_*", "CALIBRATION_*".
  * Not setting "Provider", "Parent_version".
* Requires BIAS RCT on new filenaming convention, e.g.
  "solo_CAL_rpw-bias_20220210-20990101_V01.cdf", by changing the default
  value for setting PROCESSING.RCT_REGEXP.BIAS.
* Non-Standard Operations (NSO) table thruster firings updated for until
  2024-05-19, and previously missing thruster firing for 2024-04-11.
* Produces datasets using CDF version 3.9.0.
* Removed obsoleted settings:
  OUTPUT_CDF.GA_MODS_ENABLED
  OUTPUT_CDF.WRITE_FILE_DISABLED
  OUTPUT_CDF.NO_PROCESSING_EMPTY_FILE
  JSON_OBJECT_STR.INDENT_SIZE
* Renamed setting:
     INPUT_CDF.GA_PROVIDER_MISMATCH_POLICY
  -->INPUT_CDF.GA_PARENTS_MISMATCH_POLICY
* Abolishes the unofficial --swdescriptor argument.


Version 8.2.1
-------------
* Bugfix: Including previously missing source code updates.


Version 8.3.0
-------------
* Reinstate the unofficial --swdescriptor argument.
* Non-Standard Operations (NSO) table thruster firings updated for until
  2024-08-04.
* Always use bias_rct_validity.json for selecting BIAS RCT (never uses reg.exp.
  on filenames)
* Default value for setting PROCESSING.RCT_REGEXP.LFR updated for new filenaming
  convention (though assumes begin and end dates). Does not affect nominal
  processing.
* Removed setting
  PROCESSING.RCT_REGEXP.BIAS
* Changed glob.attributes TIME_MIN, TIME_MAX to only have six decimals.
* Requires updated master CDF versions (better metadata) for all datasets.


Version x.y.z
-------------
* Rename settings:
       PROCESSING.L2.DETECT_SWEEPS.*
    -->PROCESSING.L2.SWEEP_DETECTION.*
       PROCESSING.L2.SWEEP_DETECTION.SBDA.END_UTC
    -->PROCESSING.L2.SWEEP_DETECTION.SBDA_SCDA_BOUNDARY_UTC
       PROCESSING.L2.LFR.REMOVE_DATA.MUX_MODE.MARGIN_S
    -->PROCESSING.L2.LFR.REMOVE_DATA.MUX_MODE.MARGIN_SEC
       PROCESSING.L2.TDS.REMOVE_DATA.MUX_MODE.MARGIN_S
    -->PROCESSING.L2.TDS.REMOVE_DATA.MUX_MODE.MARGIN_SEC