@@ -235,3 +235,5 @@ Version x.y.z
     -->PROCESSING.L2.LFR.REMOVE_DATA.MUX_MODE.MARGIN_SEC
        PROCESSING.L2.TDS.REMOVE_DATA.MUX_MODE.MARGIN_S
     -->PROCESSING.L2.TDS.REMOVE_DATA.MUX_MODE.MARGIN_SEC
+       PROCESSING.L2.SWEEP_DETECTION.SCDA.WINDOW_LENGTH_PTS
+    -->PROCESSING.L2.SWEEP_DETECTION.SCDA.WINDOW_LENGTH_HK_CDF_RECORDS
